# seam-carving

./: CMakeLists.txt  README.md
src/: seam_carving.cpp
